# simple_spi

./: .gitignore  .gitmodules  Makefile  README.md  source_me  tmp-macros-list
.github/workflows/: user_project_ci.yml
def/: spi_device.def  spi_register.def  spi_wrapper.def  user_project_wrapper.def
gds/: spi_device.gds  spi_register.gds  spi_wrapper.gds
lef/: spi_device.lef  spi_register.lef  spi_wrapper.lef  user_proj_example.lef  user_project_wrapper.lef
lib/: spi_device.lib  spi_register.lib  spi_wrapper.lib  user_proj_example.lib  user_project_wrapper.lib
mag/: spi_device.mag  spi_register.mag  spi_wrapper.mag
maglef/: spi_device.mag  spi_register.mag  spi_wrapper.mag  user_proj_example.mag  user_project_wrapper.mag
openlane/spi_device/: config.json  pin_order.cfg
openlane/spi_register/: config.json  pin_order.cfg
openlane/spi_wrapper/: config.tcl
openlane/user_proj_example/: config.json
openlane/user_project_wrapper/: config.json  config.tcl  macro.cfg
openlane/user_project_wrapper_bck/: config.json
sdc/: spi_device.sdc  spi_register.sdc  user_proj_example.sdc  user_project_wrapper.sdc
sdf/: spi_device.sdf  spi_register.sdf  user_proj_example.sdf  user_project_wrapper.sdf
signoff/spi_device/: OPENLANE_VERSION  metrics.csv
spef/: spi_device.spef  spi_register.spef  user_proj_example.spef  user_project_wrapper.spef
verilog/rtl_core/: .gitignore  README.md  environment.yml  pyproject.toml
verilog/rtl_core/.github/workflows/: verilog_test.yml
verilog/rtl_core/spi_device/: Makefile  Manifest.py  spi_device.v  spi_device_tb.v
(+50 files in other folders)
